[gd_scene load_steps=15 format=2]

[ext_resource path="res://Gamemenu/font/Adventurer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Gamemenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Sound eff/SBG.ogg" type="AudioStream" id=3]
[ext_resource path="res://GameUi/r36s9exzs4u21.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=10]
size = 75
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 3.0
margin_right = 1031.0
margin_bottom = 631.0
texture = ExtResource( 4 )
expand = true

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -122.0
margin_right = 288.5
margin_bottom = 122.0

[node name="Gamename" type="Label" parent="Menu"]
margin_right = 577.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Sword&Magic 2D"

[node name="Start" type="Button" parent="Menu"]
margin_top = 80.0
margin_right = 577.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"
flat = true

[node name="Setting" type="Button" parent="Menu"]
margin_top = 122.0
margin_right = 577.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Setting"
flat = true

[node name="Exit" type="Button" parent="Menu"]
margin_top = 164.0
margin_right = 577.0
margin_bottom = 202.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true

[node name="Go ToWeb" type="Button" parent="Menu"]
margin_top = 206.0
margin_right = 577.0
margin_bottom = 244.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Go to website"
flat = true

[node name="Setting" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -40.0
margin_right = 32.0
margin_bottom = 40.0

[node name="Video" type="Button" parent="Setting/VBoxContainer"]
margin_right = 90.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Video"
flat = true

[node name="Audio" type="Button" parent="Setting/VBoxContainer"]
margin_top = 42.0
margin_right = 90.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Audio"
flat = true

[node name="BackSetting" type="Button" parent="Setting"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -10.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "BACK"
flat = true

[node name="Video" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -34.0
margin_right = 92.0
margin_bottom = 34.0

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_right = 156.0
margin_bottom = 68.0

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
margin_right = 156.0
margin_bottom = 32.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
margin_top = 36.0
margin_right = 156.0
margin_bottom = 68.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Borderless"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
margin_left = 160.0
margin_right = 184.0
margin_bottom = 68.0

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_right = 24.0
margin_bottom = 32.0
size_flags_vertical = 3

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
margin_top = 36.0
margin_right = 24.0
margin_bottom = 68.0
size_flags_vertical = 3

[node name="BackVideo" type="Button" parent="Video"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 3 )
text = "BACK"
flat = true

[node name="Audio" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -52.0
margin_right = 182.0
margin_bottom = 52.0

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_right = 138.0
margin_bottom = 104.0

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_right = 138.0
margin_bottom = 32.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 36.0
margin_right = 138.0
margin_bottom = 68.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Music"

[node name="SoundFX" type="Label" parent="Audio/HBoxContainer/Labels"]
margin_top = 72.0
margin_right = 138.0
margin_bottom = 104.0
size_flags_vertical = 6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
margin_left = 142.0
margin_right = 364.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_right = 222.0
margin_bottom = 32.0
size_flags_vertical = 3

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 36.0
margin_right = 222.0
margin_bottom = 68.0
size_flags_vertical = 3

[node name="SoundFX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
margin_top = 72.0
margin_right = 222.0
margin_bottom = 104.0
size_flags_vertical = 3

[node name="BackAudio" type="Button" parent="Audio"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 3 )
text = "BACK"
flat = true

[node name="MusicTitleScreen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -8.889
autoplay = true

[connection signal="pressed" from="Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu/Go ToWeb" to="." method="_on_Go_ToWeb_pressed"]
[connection signal="pressed" from="Setting/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="Setting/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Setting/BackSetting" to="." method="_on_BackSetting_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_Borderless_toggled"]
[connection signal="pressed" from="Video/BackVideo" to="." method="_on_BackVideo_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/SoundFX" to="." method="_on_SoundFX_value_changed"]
[connection signal="pressed" from="Audio/BackAudio" to="." method="_on_BackAudio_pressed"]
